--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <a href="#">nueva pagina web</a>
 <img src="img/img.png" alt="img"/>
 
-<div> <p>last pass hackeado</p> </div>
+<div> <p>bitWarden</p> </div>
 
-<img scr="jojo" alt="20"/>
+<img scr="img/foto.img" alt="20"/>
 
 jrfiowhrhgerhghrehghrpeihguh
 
 <p>se</p>
-<a href="#" > new </a>
+<a href="#" >new</a>
 
 
 <img src="hola" alt="saludo" />
