--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <head>
 <title>Curso</title>
 <p>Cambiando de laburo</p>
-<h1>title</h1>
+<h1>Alura Cursos</h1>
+<h2>Hola mundo</h2>
+
 
 <link stylesheet="css" src="css.css"/>
 </head>
